dotnet-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-dotnet-sample
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pipeline-dotnet-sample
