dotnet-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipeline-dotnet-sample
  name: pipeline-dotnet-sample
spec:
  to:
    kind: Service
    name: pipeline-dotnet-sample
    weight: 100
